# ocr_translate-hugging_face

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
ocr_translate_hugging_face/: __init__.py
ocr_translate_hugging_face/plugin/: seq2seq.py  utils.py
tests/: conftest.py
